Fixed WpSnippet overflow
<blockquote> element had a vertical scrollbar. Using `inherit` fixes both scrollbar and glyph

--- a/css/plugins/wikipediasnippet.less
+++ b/css/plugins/wikipediasnippet.less
@@ -32,3 +32,7 @@ dl.wpsnip dd blockquote::before {
   font-size: 15rem;
   color: rgba(150, 150, 150, 0.25);
 }
+
+dl.wpsnip dd blockquote {
+  overflow: initial;
+}
